# api/controllers/v1/reseller-order-comissions-controller.js
@@ -1,35 +1,48 @@
 const { houstonClientErrors } = require('houston-errors');
 const { createOrderInputSchema } = require('./schemas/reseller-order-comission-schemas');
-const { ResellerOrderComissions, ComissionRules } = require('../../../db/models');
+const orderComissionRepository = require('../repositories/order-comission-repository');
 const logger = require('../../config/logger');
 
 const { BAD_REQUEST } = houstonClientErrors;
 
-const createOrderComission = async ({ body, reseller_id }, response) => {
+const createOrderComissionController = async ({ body, meta }, response) => {
   try {
     const isParamsValid = await createOrderInputSchema.validate(body);
     if (isParamsValid) {
-      const cart = Carts.findOrCreate({
-        where: {
-          reseller_id,
-          order_statuses: 'OPEN',
-        },
-        defaults: {
-          reseller_id,
-        },
+      const orderComission = await orderComissionRepository.createOrderComission({
+        ...body,
+        reseller_id: meta.reseller_id,
       });
-      logger.systemLogLevel({ meta: { cart } });
-      const cartItems = await CartItems.findAll({ where: { ...products }, attributes: ['id'] });
-      logger.systemLogLevel({ meta: { cartItems } });
-      card.addCartItems();
-      response.status(201).send(reseller);
+      response.status(201).send(orderComission);
     }
   } catch (error) {
-    logger.systemLogLevel({ error, level: 'error' });
+    logger.systemLogLevel({
+      error,
+      meta: { function: 'createOrderComissionController' },
+      level: 'error',
+    });
+    response.status(BAD_REQUEST.code).send(error);
+  }
+};
+
+const listOrderComissionController = async ({ meta }, response) => {
+  try {
+      const order_comissions = await orderComissionRepository.listOrderComissions({
+        reseller_id: meta.reseller_id,
+      });
+      console.log('[order_comissions]', order_comissions);
+    response.status(201).send({ order_comissions });
+  } catch (error) {
+    logger.systemLogLevel({
+      error,
+      meta: { function: 'createOrderComissionController' },
+      level: 'error',
+    });
     response.status(BAD_REQUEST.code).send(error);
   }
 };
 
 module.exports = {
-  createOrderComission,
+  createOrderComissionController,
+  listOrderComissionController,
 };
